Refactor SecurityConfig to use dynamic allowed origins